feature:create polic bazaar layout

--- a/index.html
+++ b/index.html
@@ -7,6 +7,120 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <header class="header">
+            <nav class="head-nav-left">
+                <img src="" alt="policy-bazaar-image">
+            </nav>
+            <nav class="head-nav-right">
+                <a href="">Insaurance Product</a>
+                <a href="">Renew Your Policy</a>
+                <a href="">Claim</a>
+                <a href="">Support</a>
+                <button class="head-btn">Talk to Expert</button>
+                <button class="head-btn">Sign in</button>
+            </nav>
+        </header>
+        <main class="main-body">
+            <section class="section-top">
+                <div class="sec-div-left">
+                    <h1>Let's find you <br> the <strong id="strong">Best Insaurance</strong></h1>
+                    <div class="text">
+                        <p>51 insurers offering <br> lowest prices</p>
+                        <p>Quick, easy & <br> hassle free</p>
+                    </div>
+                </div>
+                <div class="sec-div-right">
+
+                </div>
+            </section>
+            <section class="sec-mid">
+                <div class="sec-mid-div">
+                    <article class="box">
+                        <div class="box-div"></div>
+                        <p>Term Life Insurance</p>
+                    </article>
+
+                    <article class="box">
+                        <div class="box-div"></div>
+                        <p>Health Insurance</p>
+                    </article>
+
+                    <article class="box">
+                        <div class="box-div"></div>
+                        <p>Investment Plans</p>
+                    </article>
+
+                    <article class="box">
+                        <div class="box-div"></div>
+                        <p>Car Insurance</p>
+                    </article>
+
+                    <article class="box">
+                        <div class="box-div"></div>
+                        <p>2 Wheeler Insurance</p>
+                    </article>
+
+                    <article class="box">
+                        <div class="box-div"></div>
+                        <p>Family Health Insurance</p>
+                    </article>
+
+                    <article class="box">
+                        <div class="box-div"></div>
+                        <p>Travel Insurance</p>
+                    </article>
+                    <article class="box">
+                        <div class="box-div"></div>
+                        <p>Term Insurance (Women)</p>
+                    </article>
+                    <article class="box">
+                        <div class="box-div"></div>
+                        <p>Term Plans with Return of Premium</p>
+                    </article>
+                    <article class="box">
+                        <div class="box-div"></div>
+                        <p>Guaranteed Return Plans</p>
+                    </article>
+                    <article class="box">
+                        <div class="box-div"></div>
+                        <p>Child Savings Plans</p>
+                    </article>
+                    <article class="box">
+                        <div class="box-div"></div>
+                        <p>Retirement Plans</p>
+                    </article>
+                    <article class="box">
+                        <div class="box-div"></div>
+                        <p>Employee Group Health Insurance</p>
+                    </article>
+                    <article class="box">
+                        <div class="box-div"></div>
+                        <p>Home Insurance</p>
+                    </article>
+                </div>
+            </section>
+            <nav class="nav-ind">
+                <button class="head-btn ind">View all product</button>
+            </nav>
+            <section class="sec-last">
+                <div class="sec-last-span">
+                    <div class="sec-span">lic plan</div>
+                    <div class="sec-span">lic plan</div>
+                    <div class="sec-span">lic plan</div>
+                    <div class="sec-span">lic plan</div>
+                    <div class="sec-span">lic plan</div>
+                    <div class="sec-span">lic plan</div>
+                    <div class="sec-span">lic plan</div>
+                    <div class="sec-span">lic plan</div>
+                    <div class="sec-span">lic plan</div>
+                    <div class="sec-span">lic plan</div>
+                    <div class="sec-span">lic plan</div>
+                    <div class="sec-span">lic plan</div>
+                    <div class="sec-span">lic plan</div>
+                </div>
+            </section>
+        </main>
+    </div>
 </body>
 </html>
