enhance:make div height responsive

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
                 <button class="head-btn ind">View all product</button>
             </nav>
             <section class="sec-last">
+                <p class="buy">ALSO BUY</p>
                 <div class="sec-last-span">
                     <div class="sec-span">
                         <ul>
